Ensure that profile summaries are displayed in a "compressed" form, with extra spaces removed.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -424,3 +424,9 @@ li.cl-indent {
     white-space: pre-wrap;
     word-wrap: break-word;
 }
+
+
+.cl-compressed-display-user-text {
+    white-space: pre-line;
+    word-wrap: break-word;
+}
